# CuratAI

./: .gitignore  README.md
curat-ai-demo/: README.md  auth.py  chat.py  chat_api.py  jira_db.sqlite  pyproject.toml  set_env.sh  tools.py  utils.py
